--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -694,6 +694,7 @@ body.hasRichEditor {
         }
 
         // New Message
+        #EventAddEditForm,
         #GroupForm,
         #MessageForm,
         #ConversationForm {
